objects/CookieConsentCategory__c.object
<CustomObject>
    <fields>
        <fullName>AdditionalInformation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DefaultValue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The default opt-in value for the section.</description>
        <inlineHelpText>The default opt-in value for the section.</inlineHelpText>
        <label>Default Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>The category notes that will be displayed to the user viewing the cookie consent modal.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manditory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the cookie consent section is mandatory.</description>
        <inlineHelpText>Mark true if the section is mandatory</inlineHelpText>
        <label>Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RelatedAuthorizationForm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Authorization Form that the User will consent to for each section.</description>
        <label>Related Authorization Form</label>
        <referenceTo>AuthorizationFormText</referenceTo>
        <relationshipLabel>Cookie Consent Categories</relationshipLabel>
        <relationshipName>Cookie_Consent_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Cookie Consent Category</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Cookie Consent Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cookie Consent Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>